src/objects/Training_Unit_Item__c.object
<CustomObject>
    <fields>
        <fullName>EventStart__c</fullName>
        <label>Event Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Used</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refunded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TU__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TU Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Unit__c</fullName>
        <label>Training Unit Name</label>
        <referenceTo>Training_Unit__c</referenceTo>
        <relationshipName>Training_Unit_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Unit_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Voucher_Code__c</fullName>
        <formula>Training_Unit__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Code</label>
        <type>Text</type>
    </fields>
    <label>Training Unit Usage</label>
    <nameField>
        <displayFormat>TUI-{00000}</displayFormat>
        <label>Training Unit Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Units Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>